k8s/python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app-container
        image: sergicasti/ci-cd-sergicastillo:latest
        ports:
        - containerPort: 5000  # El puerto en el que tu aplicación Flask está escuchando
