k8s/python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000  # El puerto en el que tu aplicación Flask está escuchando
  type: ClusterIP
