k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-sergicastillo-service
spec:
  selector:
    app: ci-cd-sergicastillo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
