k8s/servicio.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-sergicastillo-service
spec:
  selector:
    app: ci-cd-sergicastillo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
  type: ClusterIP
